--- a/src/renderer/src/components/base/linkedModal/LinkedModal.module.css
+++ b/src/renderer/src/components/base/linkedModal/LinkedModal.module.css
@@ -11,6 +11,7 @@
   display: flex;
   flex-direction: column;
   overflow: auto;
+  box-shadow: 0.2rem 0.3rem 0.6rem 0rem var(--transparent-bg);
 
   & > * {
     padding: 0.3rem;
